--- a/index.html
+++ b/index.html
@@ -3,114 +3,161 @@
 <head>
     <meta charset="UTF-8">
     <title>Grahitha Eda | Software Engineer</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
+
 </head>
 <body>
 
-<header>
-    <h1>Grahitha Eda</h1>
-    <h2>Software Engineer</h2>
-    <p>
+<nav class="navbar">
+    <div class="nav-left">Grahitha Eda</div>
+
+    <div class="nav-actions">
+        <button class="theme-toggle" onclick="toggleTheme()">🌙</button>
+        <div class="hamburger" onclick="toggleMenu()">☰</div>
+    </div>
+
+    <ul class="nav-right" id="navMenu">
+        <li><a href="#about" onclick="closeMenu()">About</a></li>
+        <li><a href="#experience" onclick="closeMenu()">Experience</a></li>
+        <li><a href="#projects" onclick="closeMenu()">Projects</a></li>
+        <li><a href="#featured" onclick="closeMenu()">Featured</a></li>
+        <li><a href="#resume" onclick="closeMenu()">Resume</a></li>
+        <li>
+            <a href="resume/Grahitha_Resume.pdf" target="_blank" class="nav-cta">
+                Download Resume
+            </a>
+        </li>
+    </ul>
+</nav>
+
+<header class="hero reveal">
+    <p class="hero-tag">SOFTWARE ENGINEER</p>
+    <h1>Building Reliable Backend Systems</h1>
+    <p class="hero-sub">
         Backend-focused software engineer with experience in cloud migration,
         databases, and data-intensive systems.
     </p>
 
-    <div class="links">
-        <a href="resume/Grahitha_Eda_Resume.pdf" target="_blank">Resume</a>
-        <a href="https://github.com/YOUR_GITHUB" target="_blank">GitHub</a>
-        <a href="https://linkedin.com/in/YOUR_LINKEDIN" target="_blank">LinkedIn</a>
+    <div class="hero-actions">
+        <a href="resume/Grahitha_Resume.pdf" target="_blank" class="primary-btn">
+            Download Resume
+        </a>
+        <a href="#resume" class="secondary-btn">
+            View Resume
+        </a>
     </div>
-
 </header>
 
-
-<section>
+<section id="about" class="reveal">
     <h3>About Me</h3>
     <p>
         I am a Master’s student in Computer Science with professional experience
         in software engineering, backend systems, and database-driven applications.
-        I have worked in enterprise environments supporting cloud migration,
-        production systems, and large-scale data workflows.
-    </p>
-    <p>
-        I enjoy building reliable backend systems where scalability, data integrity,
-        and clean architecture are critical.
     </p>
 </section>
 
+<section id="experience" class="reveal">
+    <h3>Experience</h3>
 
-<section>
-    <h3>Technical Skills</h3>
-    <ul>
-        <li><strong>Languages:</strong> Python, PHP, Java, SQL, C# (basic)</li>
-        <li><strong>Backend & Web:</strong> Laravel, Django, REST APIs, MVC Architecture</li>
-        <li><strong>Databases:</strong> MariaDB, MySQL, Oracle SQL, PL/SQL</li>
-        <li><strong>Data & Systems:</strong> Hadoop, Spark, Data Processing, NLP</li>
-        <li><strong>Tools:</strong> Git, JIRA, Linux, VS Code, PhpStorm</li>
-        <li><strong>Practices:</strong> Unit Testing, API Testing, Agile/Scrum</li>
-    </ul>
+    <div class=" block hover-card">
+        <h4>Systems Engineer — Tata Consultancy Services (TCS)</h4>
+        <span>Aug 2022 – Dec 2023</span>
+        <ul>
+            <li>Supported GCP cloud migration planning and application inventory analysis.</li>
+            <li>Analyzed network dependencies and firewall configurations.</li>
+            <li>Handled production database support and monitoring.</li>
+        </ul>
+    </div>
 </section>
 
-<section>
+<section id="projects" class="reveal">
     <h3>Projects</h3>
 
-    <div class="project">
+    <div class=" block hover-card">
         <h4>Preventive Health Education (PHE) Platform</h4>
-        <p><em>Backend & Database Developer — Capstone Project</em></p>
+        <p class="muted">Backend & Database Developer — Capstone</p>
         <p>
-            Developed an industry-sponsored platform supporting structured learning
-            modules, assessments, and user progress tracking.
+            Developed an industry-sponsored platform supporting structured learning,
+            assessments, and progress tracking.
         </p>
-        <p>
-            Designed and implemented backend architecture using Laravel and MariaDB,
-            including authentication, role-based access control, quiz workflows,
-            and gamification features.
-        </p>
-        <p>
-            <strong>Tech:</strong> PHP (Laravel), MariaDB, REST APIs
-        </p>
-    </div>
-
-    <div class="project">
-        <h4>Sentiment Analysis of Amazon Product Reviews</h4>
-        <p>
-            Built a deep learning-based NLP system to classify Amazon product reviews
-            into five sentiment categories, addressing noisy text and class imbalance.
-        </p>
-        <p>
-            Applied modern NLP techniques including BERT-based embeddings and
-            evaluated models using standard classification metrics.
-        </p>
-        <p>
-            <strong>Tech:</strong> Python, NLP, Deep Learning
-        </p>
+        <p><strong>Tech:</strong> Laravel, MariaDB, REST APIs</p>
     </div>
 </section>
 
-<section>
-    <h3>Work Experience</h3>
+<section id="featured" class="reveal">
+    <h3>Featured & Recognition</h3>
 
-    <p><strong>Systems Engineer — Tata Consultancy Services (TCS)</strong></p>
-    <ul>
-        <li>Supported GCP cloud migration planning and application inventory analysis.</li>
-        <li>Analyzed network dependencies and firewall configurations.</li>
-        <li>Handled production database support and system monitoring.</li>
-    </ul>
-
-    <p><strong>Software Engineer Intern — Cognizant</strong></p>
-    <ul>
-        <li>Worked with Java, SQL, Hadoop, and Spark in distributed data workflows.</li>
-        <li>Supported batch job execution and validation on large datasets.</li>
-    </ul>
+    <div class="feature-card">
+        <h4>Future Leader — Be The Cause</h4>
+        <p>
+            Featured on the Be The Cause – Future Leaders platform
+            for contributions to the PHE Capstone project.
+        </p>
+        <a href="https://www.bethecause.org" target="_blank" class="cta">
+            View Feature
+        </a>
+    </div>
 </section>
 
+<!-- RESUME SECTION -->
+<section id="resume" class="reveal">
+    <h3>Resume</h3>
 
+    <p>
+        You can download my resume or preview it directly below.
+    </p>
 
-<section>
-    <h3>Contact</h3>
-    <p>Email: grahitha@example.com</p>
-    <p>GitHub | LinkedIn</p>
+    <div class="resume-actions">
+        <a href="resume/Grahitha_Resume.pdf" target="_blank" class="primary-btn">
+            Download PDF
+        </a>
+        <button class="secondary-btn" onclick="toggleResume()">
+            Toggle Preview
+        </button>
+    </div>
+
+    <div id="resumePreview" class="resume-preview">
+        <iframe
+                src="resume/Grahitha_Resume.pdf"
+                title="Grahitha Eda Resume">
+        </iframe>
+    </div>
 </section>
+
+<footer>
+    <p>© 2025 Grahitha Eda</p>
+    <p>
+        <a href="https://github.com/Grahitha" target="_blank">GitHub</a> |
+        <a href="https://linkedin.com/in/YOUR_LINKEDIN" target="_blank">LinkedIn</a>
+    </p>
+</footer>
+
+<script>
+    function toggleMenu() {
+        document.getElementById("navMenu").classList.toggle("show");
+    }
+    function closeMenu() {
+        document.getElementById("navMenu").classList.remove("show");
+    }
+    function toggleTheme() {
+        document.body.classList.toggle("dark");
+    }
+    function toggleResume() {
+        document.getElementById("resumePreview").classList.toggle("show");
+    }
+
+    // Reveal animation
+    const reveals = document.querySelectorAll(".reveal");
+    const observer = new IntersectionObserver(entries => {
+        entries.forEach(entry => {
+            if (entry.isIntersecting) {
+                entry.target.classList.add("active");
+            }
+        });
+    });
+    reveals.forEach(r => observer.observe(r));
+</script>
 
 </body>
 </html>
