--- a/index.html
+++ b/index.html
@@ -4,36 +4,34 @@
     <meta charset="UTF-8">
     <title>Grahitha Eda | Software Engineer</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
 
+    <!-- CSS -->
+    <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
 
+<!-- NAVBAR -->
 <nav class="navbar">
     <div class="nav-left">Grahitha Eda</div>
 
-    <div class="nav-actions">
-        <button class="theme-toggle" onclick="toggleTheme()">🌙</button>
-        <div class="hamburger" onclick="toggleMenu()">☰</div>
-    </div>
-
-    <ul class="nav-right" id="navMenu">
-        <li><a href="#about" onclick="closeMenu()">About</a></li>
-        <li><a href="#experience" onclick="closeMenu()">Experience</a></li>
-        <li><a href="#projects" onclick="closeMenu()">Projects</a></li>
-        <li><a href="#featured" onclick="closeMenu()">Featured</a></li>
-        <li><a href="#resume" onclick="closeMenu()">Resume</a></li>
+    <ul class="nav-right">
+        <li><a href="#about">About</a></li>
+        <li><a href="#experience">Experience</a></li>
+        <li><a href="#projects">Projects</a></li>
+        <li><a href="#featured">Featured</a></li>
         <li>
             <a href="resume/Grahitha_Resume.pdf" target="_blank" class="nav-cta">
-                Download Resume
+                Resume
             </a>
         </li>
     </ul>
 </nav>
 
-<header class="hero reveal">
+<!-- HERO -->
+<header class="hero">
     <p class="hero-tag">SOFTWARE ENGINEER</p>
-    <h1>Building Reliable Backend Systems</h1>
+    <h1>Building Reliable<br>Backend Systems</h1>
     <p class="hero-sub">
         Backend-focused software engineer with experience in cloud migration,
         databases, and data-intensive systems.
@@ -43,121 +41,76 @@
         <a href="resume/Grahitha_Resume.pdf" target="_blank" class="primary-btn">
             Download Resume
         </a>
-        <a href="#resume" class="secondary-btn">
-            View Resume
+        <a href="#projects" class="secondary-btn">
+            View Projects
         </a>
     </div>
 </header>
 
-<section id="about" class="reveal">
-    <h3>About Me</h3>
+<!-- ABOUT -->
+<section id="about">
+    <h2>About Me</h2>
     <p>
         I am a Master’s student in Computer Science with professional experience
-        in software engineering, backend systems, and database-driven applications.
+        in backend development, cloud migration, and database-driven systems.
+        I enjoy building scalable, reliable software with clean architecture.
     </p>
 </section>
 
-<section id="experience" class="reveal">
-    <h3>Experience</h3>
+<!-- EXPERIENCE -->
+<section id="experience">
+    <h2>Experience</h2>
 
-    <div class=" block hover-card">
-        <h4>Systems Engineer — Tata Consultancy Services (TCS)</h4>
-        <span>Aug 2022 – Dec 2023</span>
+    <div class="card">
+        <h3>Systems Engineer — Tata Consultancy Services (TCS)</h3>
+        <span class="muted">Aug 2022 – Dec 2023</span>
         <ul>
             <li>Supported GCP cloud migration planning and application inventory analysis.</li>
-            <li>Analyzed network dependencies and firewall configurations.</li>
-            <li>Handled production database support and monitoring.</li>
+            <li>Analyzed network dependencies, firewall rules, and secure connectivity.</li>
+            <li>Handled production database monitoring and issue resolution.</li>
         </ul>
     </div>
 </section>
 
-<section id="projects" class="reveal">
-    <h3>Projects</h3>
+<!-- PROJECTS -->
+<section id="projects">
+    <h2>Projects</h2>
 
-    <div class=" block hover-card">
-        <h4>Preventive Health Education (PHE) Platform</h4>
+    <div class="card">
+        <h3>Preventive Health Education (PHE) Platform</h3>
         <p class="muted">Backend & Database Developer — Capstone</p>
         <p>
-            Developed an industry-sponsored platform supporting structured learning,
-            assessments, and progress tracking.
+            Industry-sponsored platform supporting structured learning modules,
+            assessments, gamification, and personalized insights.
         </p>
         <p><strong>Tech:</strong> Laravel, MariaDB, REST APIs</p>
     </div>
 </section>
 
-<section id="featured" class="reveal">
-    <h3>Featured & Recognition</h3>
+<!-- FEATURED -->
+<section id="featured">
+    <h2>Featured & Recognition</h2>
 
-    <div class="feature-card">
-        <h4>Future Leader — Be The Cause</h4>
+    <div class="card highlight">
+        <h3>Future Leader — Be The Cause</h3>
         <p>
-            Featured on the Be The Cause – Future Leaders platform
-            for contributions to the PHE Capstone project.
+            Featured on the Be The Cause “Future Leaders” platform for contributions
+            to the Preventive Health Education capstone project.
         </p>
-        <a href="https://www.bethecause.org" target="_blank" class="cta">
+        <a href="https://www.bethecause.org" target="_blank" class="primary-btn">
             View Feature
         </a>
     </div>
 </section>
 
-<!-- RESUME SECTION -->
-<section id="resume" class="reveal">
-    <h3>Resume</h3>
-
-    <p>
-        You can download my resume or preview it directly below.
-    </p>
-
-    <div class="resume-actions">
-        <a href="resume/Grahitha_Resume.pdf" target="_blank" class="primary-btn">
-            Download PDF
-        </a>
-        <button class="secondary-btn" onclick="toggleResume()">
-            Toggle Preview
-        </button>
-    </div>
-
-    <div id="resumePreview" class="resume-preview">
-        <iframe
-                src="resume/Grahitha_Resume.pdf"
-                title="Grahitha Eda Resume">
-        </iframe>
-    </div>
-</section>
-
+<!-- FOOTER -->
 <footer>
     <p>© 2025 Grahitha Eda</p>
     <p>
-        <a href="https://github.com/Grahitha" target="_blank">GitHub</a> |
-        <a href="https://linkedin.com/in/YOUR_LINKEDIN" target="_blank">LinkedIn</a>
+        <a href="https://github.com/Grahitha" target="_blank">GitHub</a> ·
+        <a href="https://linkedin.com" target="_blank">LinkedIn</a>
     </p>
 </footer>
-
-<script>
-    function toggleMenu() {
-        document.getElementById("navMenu").classList.toggle("show");
-    }
-    function closeMenu() {
-        document.getElementById("navMenu").classList.remove("show");
-    }
-    function toggleTheme() {
-        document.body.classList.toggle("dark");
-    }
-    function toggleResume() {
-        document.getElementById("resumePreview").classList.toggle("show");
-    }
-
-    // Reveal animation
-    const reveals = document.querySelectorAll(".reveal");
-    const observer = new IntersectionObserver(entries => {
-        entries.forEach(entry => {
-            if (entry.isIntersecting) {
-                entry.target.classList.add("active");
-            }
-        });
-    });
-    reveals.forEach(r => observer.observe(r));
-</script>
 
 </body>
 </html>
